--- a/Baco/nbproject/private/private.properties
+++ b/Baco/nbproject/private/private.properties
@@ -4,4 +4,7 @@ j2ee.server.domain=C:/Users/panic/GlassFish_Server/glassfish/domains/domain1
 j2ee.server.home=C:/Users/panic/GlassFish_Server/glassfish
 j2ee.server.instance=[C:\\Users\\panic\\GlassFish_Server\\glassfish;C:\\Users\\panic\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv5ee8:localhost:4848
 j2ee.server.middleware=C:/Users/panic/GlassFish_Server
+javac.debug=true
+javadoc.preview=true
+selected.browser=Chrome
 user.properties.file=C:\\Users\\panic\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
