--- a/Baco/nbproject/project.properties
+++ b/Baco/nbproject/project.properties
@@ -33,6 +33,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
+file.reference.core-3.3.0.jar=..\\..\\..\\..\\Downloads\\core-3.3.0.jar
+file.reference.javase-3.3.0.jar=..\\..\\..\\..\\Downloads\\javase-3.3.0.jar
 file.reference.mssql-jdbc-8.4.1.jre8.jar=..\\..\\..\\sqljdbc_8.4\\enu\\mssql-jdbc-8.4.1.jre8.jar
 includes=**
 j2ee.compile.on.save=true
@@ -48,7 +50,9 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv5ee8
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mssql-jdbc-8.4.1.jre8.jar}
+    ${file.reference.mssql-jdbc-8.4.1.jre8.jar}:\
+    ${file.reference.javase-3.3.0.jar}:\
+    ${file.reference.core-3.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
